# xconn-python

./: 404.html  CNAME  LICENSE  Makefile  README.md  example.py  index.html  main.py  main_async.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-pinned.txt  requirements.txt  ruff.toml  runner.py  sitemap.xml
.github/workflows/: main.yaml  upload.yaml
docs/: index.md  installation.md
examples/app/: Makefile  basic_pydantic_model.py  basic_signature_validate.py  client.yaml  main.py  main_async.py  main_sync.py  models.py  xapp.yaml
examples/asyncio/: authentications.py  serializers.py
examples/asyncio/pubsub/: publisher.py  subscriber.py
examples/asyncio/rpc/: callee.py  caller.py
examples/asyncio/rpc_progressive_call_results/: callee.py  caller.py
examples/simple/: example.py  included_app.py
examples/sync/: authentications.py  serializers.py
examples/sync/pubsub/: publisher.py  subscriber.py
examples/sync/rpc/: callee.py  caller.py
examples/sync/rpc_progressive_call_results/: callee.py  caller.py
installation/: index.html
search/: search_index.json
tests/: acceptor_test.py  codec_test.py  helpers_test.py  interop_test.py  profile_pb2.py  router_test.py  utils.py  wsacceptor_test.py
tests/.nxt/: config.yaml
tests/aat/: client_test.py
tests/integration/: async_pubsub_test.py  async_rpc_test.py  pubsub_test.py  rpc_test.py
tests/schemas/: profile.proto  profile_pb2.py  profile_pb2.pyi  user.capnp
wamp/: __main__.py  acceptor.py  app.py  client.py  helpers.py  joiner.py  realm.py  router.py  server.py  session.py  types.py  wamp_session_joiner.py  wsacceptor.py  wsjoiner.py
xconn/: __init__.py  __main__.py  acceptor.py  app.py  async_client.py  async_session.py  client.py  codec.py  exception.py  helpers.py  joiner.py  joiner_wampproto.py  parser.py  realm.py  router.py  server.py  session.py  transports.py  types.py  uris.py  utils.py
xconn/_client/: __main__.py  async_.py  cli.py  helpers.py  sync.py  types.py  watcher.py
xconn/_router/: authenticator.py  cli.py  config.yaml.in  exception.py  helpers.py  types.py
xconn/api/: stuff.py
