[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wamp.py"
version = "0.1.0"
authors = [
  {name="Omer Akram", email="omer@thing.com"},
  {name="Mahad Munir", email="mahad@xconn.io"},
]
description = "https://github.com/xconnio/wamp.py"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "websockets",
  "wampproto",
  "aiohttp",
  "uvloop",
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
  "coverage",
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[project.scripts]
"wamp" = "wamp.__main__:main"

[project.urls]
"Homepage" = "https://github.com/xconnio/wamp.py"
"Bug Tracker" = "https://github.com/xconnio/wamp.py/issues"
